create sql transformer